tests/golden/errors/build_set_outside.kso
type node
  id:int
  peers:list

pub play =
  a = node 1 []
  set a peers []
  print "{a}"
